--- a/supercon2/templates/database.html
+++ b/supercon2/templates/database.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <title>SuperCon2 | Database</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.5.95/css/materialdesignicons.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/vuetify@2.6.3/dist/vuetify.min.css" rel="stylesheet">    <link rel="icon" type="image/x-icon" href={{ url_for('static', filename='resources/img/favicon.ico' ) }} />
-    <link rel="shortcut icon" type="image/x-icon" href={{ url_for('static', filename='resources/img/favicon.ico' ) }} />
-    <link rel="stylesheet" href={{ url_for('static', filename='resources/css/style-superconductors.css') }}/>
+    <link href="{{ url_for('static', filename='resources/libs/MaterialDesign-Webfont-6.5.95/css/materialdesignicons.min.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='resources/libs/vuetify-2.6.3/vuetify-v2.6.3.min.css') }}" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='resources/img/favicon.ico' ) }}" />
+    <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='resources/img/favicon.ico' ) }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='resources/css/style-superconductors.css') }}"/>
     <style>
         .bg-floralwhite {
             background: floralwhite
@@ -215,10 +216,10 @@
             </v-snackbar>
         </v-container>
     </v-app>
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vuetify@2.6.3/dist/vuetify.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios@0.26.1/dist/axios.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/mathjs@11.3.1/lib/browser/math.min.js"></script>
+    <script src="{{ url_for('static', filename='resources/libs/vue-2.6.14/vue.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='resources/libs/vuetify-2.6.3/vuetify-v2.6.3.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='resources/libs/axios-0.26.1/axios.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='resources/libs/mathjs-11.3.1/math.js') }}"></script>
     <script type="module">
         import { shortcutKeys } from "{{ url_for('static', filename='grobid/shortcut-keys.js')}}"
         import {copyTextToClipboard} from "{{ url_for('static', filename='grobid/lib.js')}}"
